2004-12-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-group-table): Rewrite the
	kyoiku section.
	(shimbun-yomiuri-get-headers): Remove a special treatment for the
	kyoiku group.
	(shimbun-yomiuri-prepare-article): Rewrite the code for extracting
	article bodies in the kyoiku group.

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Add the
	market group; remove stockjp, exchange, stockwo-us and stockwo-eu.
	(shimbun-nikkei-get-headers-markets): Remove.
	(shimbun-nikkei-get-headers-market): New function.
	(shimbun-make-contents): Pass the header argument to sub-functions.
	(shimbun-nikkei-prepare-article-default): Ignore argument.
	(shimbun-nikkei-prepare-article-sports): Ditto.
	(shimbun-nikkei-prepare-article-newpro): Ditto.
	(shimbun-nikkei-prepare-article-release): Ditto.
	(shimbun-nikkei-prepare-article-markets): Remove.
	(shimbun-nikkei-prepare-article-market): New function.
	(shimbun-nikkei-prepare-article-okuyami): Ignore argument.

2004-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-parse-and-fontify): Ignore a select form
	in the case where w3mmee is running if its value is not specified.
	Reported by Clemens Fischer <ino-qc@spotteswoode.de.eu.org>.

	* shimbun/sb-itmedia.el (shimbun-get-headers): Improve appearance
	of subject string.

2004-11-28  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-heise.el: (nearly) complete rewrite of the telepolis
	part due to massive changes in their html.

2004-11-25  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-exconn.el (shimbun-exconn-content-start): Synchronize.
	(shimbun-exconn-content-end): Ditto.

2004-11-23  S V N Vishwanathan  <vishketan@yahoo.com>

	* shimbun/sb-rediff.el (shimbun-rediff-month-alist): New variable.
	(shimbun-article): Signal an error if the url looks malformed; use
	match-string-no-properties instead of match-string.
	(shimbun-clear-contents): Improve regexps matching tags to be
	removed.